# gn-language-server

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  nightly.yml
docs/: releasing.md
intellij-gn/: .gitignore  build.gradle.kts  gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
intellij-gn/.run/: Run IDE with Plugin.run.xml
intellij-gn/src/main/kotlin/com/google/gn/: GnFileType.kt  GnIcons.kt  GnLanguage.kt  GnLspServerFactory.kt  GnTextMateBundleProvider.kt
intellij-gn/src/main/resources/textmate/: package.json  syntaxes
scripts/: bump_version.py  generate_builtins.py
src/: bench.rs
src/analyzer/: analyzer.rs  cache.rs  data.rs  dotgn.rs  full.rs  indexing.rs  links.rs  mod.rs  outline.rs  symbols.rs  tests.rs  toplevel.rs
src/common/: builtins.rs  client.rs  config.rs  error.rs  mod.rs  storage.rs  utils.rs  workspace.rs
src/diagnostics/: mod.rs  syntax.rs  undefined.rs
src/parser/: gn.pest  mod.rs  parse.rs
src/server/: imports.rs  indexing.rs  mod.rs  symbols.rs
src/server/providers/: code_action.rs  code_lens.rs  completion.rs  diagnostics.rs  document_link.rs  document_symbol.rs  formatting.rs  goto_definition.rs  hover.rs  mod.rs  references.rs  utils.rs  workspace_symbol.rs
testdata/workspaces/code_lens/: BUILD.gn
testdata/workspaces/completion/: BUILD.gn  BUILDCONFIG.gn  defs1.gni  defs2.gni
vscode-gn/: README.md  package-lock.json  package.json
vscode-gn/src/: extension.ts
vscode-gn/syntaxes/: gn.tmLanguage.json
