# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//defs1.gni")
import("//defs1.gni")

outer_variable = true
_outer_variable = true

template("_outer_template") {}

template("outer_template") {
  inner_variable = true
  _inner_variable = true

  template("_inner_template") {}

  template("inner_template") {
    child_variable = true
    _child_variable = true

    template("child_template") {}
    template("_child_template") {}
  }

  assert(true)
}
